disable some comp warnings
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>