@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2004, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -169,7 +169,7 @@ public class EchoImpl {
 //    @WebResult(name="outHeaderResponse")
 //    public Long echoOutHeader(@WebParam(name="outHeader")Integer age, @WebParam(name="num", mode=WebParam.Mode.OUT, header=true)LongWrapperHolder num) {
 //        log("-----------age: "+age);
-//        num.value = new Long(age);;
+//        num.value = Long.valueOf(age);;
 //        log("-----------num.value: "+num.value);
 //        log("-----------num.value+age: "+(num.value+age));
 //        return num.value+age;
@@ -179,7 +179,7 @@ public class EchoImpl {
     @WebResult(name="outHeaderResponse")
     public Long echoOutHeader(@WebParam(name="outHeader")Integer age, @WebParam(name="num", mode=WebParam.Mode.OUT, header=true)Holder<Long> num) {
         log("-----------age: "+age);
-        num.value = new Long(age);;
+        num.value = Long.valueOf(age);;
         log("-----------num.value: "+num.value);
         log("-----------num.value+age: "+(num.value+age));
         return num.value+age;
