@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2004, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2004, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -143,7 +143,7 @@ public class EchoClient extends TestCase {
 
         EchoInOutHeader echoInOutHeader = new EchoInOutHeader();
         echoInOutHeader.setArg0(33);
-        Holder<Long> longHolder = new Holder<Long>(new Long(44));
+        Holder<Long> longHolder = new Holder<Long>(Long.valueOf(44));
         echoInOutHeader.setArg2("fred");
         EchoInOutHeaderResponse echoInOutHeaderResp = stub.echoInOutHeader(echoInOutHeader, longHolder);
         assertTrue(echoInOutHeaderResp.getReturn().equals("fred88"));
