@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005, 2018 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2005, 2021 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -55,7 +55,7 @@ public class FaultImpl{
             System.out.println("Throwing Fault2Exception");
             throw new Fault2Exception("Fault2 message", fault);        
         } else if (type.equals("Fault3")) {
-            Integer fault = new Integer("1");
+            Integer fault = Integer.valueOf("1");
             System.out.println("Throwing Fault3Exception");
             throw new Fault3Exception("Fault3 message", fault);
         } else if (type.equals("Fault4")) {
